--- a/Lab02_git_github1.ipynb
+++ b/Lab02_git_github1.ipynb
@@ -317,20 +317,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: PyGithub in /home/marshal/anaconda3/lib/python3.11/site-packages (2.2.0)\n",
+      "Requirement already satisfied: pynacl>=1.4.0 in /home/marshal/anaconda3/lib/python3.11/site-packages (from PyGithub) (1.5.0)\n",
+      "Requirement already satisfied: requests>=2.14.0 in /home/marshal/anaconda3/lib/python3.11/site-packages (from PyGithub) (2.31.0)\n",
+      "Requirement already satisfied: pyjwt[crypto]>=2.4.0 in /home/marshal/anaconda3/lib/python3.11/site-packages (from PyGithub) (2.4.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in /home/marshal/anaconda3/lib/python3.11/site-packages (from PyGithub) (4.7.1)\n",
+      "Requirement already satisfied: urllib3>=1.26.0 in /home/marshal/anaconda3/lib/python3.11/site-packages (from PyGithub) (1.26.16)\n",
+      "Requirement already satisfied: Deprecated in /home/marshal/anaconda3/lib/python3.11/site-packages (from PyGithub) (1.2.14)\n",
+      "Requirement already satisfied: cryptography>=3.3.1 in /home/marshal/anaconda3/lib/python3.11/site-packages (from pyjwt[crypto]>=2.4.0->PyGithub) (41.0.3)\n",
+      "Requirement already satisfied: cffi>=1.4.1 in /home/marshal/anaconda3/lib/python3.11/site-packages (from pynacl>=1.4.0->PyGithub) (1.15.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/marshal/anaconda3/lib/python3.11/site-packages (from requests>=2.14.0->PyGithub) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/marshal/anaconda3/lib/python3.11/site-packages (from requests>=2.14.0->PyGithub) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/marshal/anaconda3/lib/python3.11/site-packages (from requests>=2.14.0->PyGithub) (2023.11.17)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in /home/marshal/anaconda3/lib/python3.11/site-packages (from Deprecated->PyGithub) (1.14.1)\n",
+      "Requirement already satisfied: pycparser in /home/marshal/anaconda3/lib/python3.11/site-packages (from cffi>=1.4.1->pynacl>=1.4.0->PyGithub) (2.21)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install PyGithub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "BadCredentialsException",
+     "evalue": "401 {\"message\": \"Bad credentials\", \"documentation_url\": \"https://docs.github.com/rest\"}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBadCredentialsException\u001b[0m                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# or using an access token\u001b[39;00m\n\u001b[1;32m      4\u001b[0m g \u001b[38;5;241m=\u001b[39m Github(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myour_access_token\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m repo \u001b[38;5;241m=\u001b[39m g\u001b[38;5;241m.\u001b[39mget_repo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124musername/repo\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/github/MainClass.py:427\u001b[0m, in \u001b[0;36mGithub.get_repo\u001b[0;34m(self, full_name_or_id, lazy)\u001b[0m\n\u001b[1;32m    425\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m lazy:\n\u001b[1;32m    426\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m github\u001b[38;5;241m.\u001b[39mRepository\u001b[38;5;241m.\u001b[39mRepository(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__requester, {}, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: url}, completed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m--> 427\u001b[0m headers, data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__requester\u001b[38;5;241m.\u001b[39mrequestJsonAndCheck(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGET\u001b[39m\u001b[38;5;124m\"\u001b[39m, url)\n\u001b[1;32m    428\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m github\u001b[38;5;241m.\u001b[39mRepository\u001b[38;5;241m.\u001b[39mRepository(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__requester, headers, data, completed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/github/Requester.py:537\u001b[0m, in \u001b[0;36mRequester.requestJsonAndCheck\u001b[0;34m(self, verb, url, parameters, headers, input)\u001b[0m\n\u001b[1;32m    529\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrequestJsonAndCheck\u001b[39m(\n\u001b[1;32m    530\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    531\u001b[0m     verb: \u001b[38;5;28mstr\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    535\u001b[0m     \u001b[38;5;28minput\u001b[39m: Optional[Any] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    536\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[Dict[\u001b[38;5;28mstr\u001b[39m, Any], Any]:\n\u001b[0;32m--> 537\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__check(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrequestJson(verb, url, parameters, headers, \u001b[38;5;28minput\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__customConnection(url)))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/github/Requester.py:598\u001b[0m, in \u001b[0;36mRequester.__check\u001b[0;34m(self, status, responseHeaders, output)\u001b[0m\n\u001b[1;32m    596\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__structuredFromJson(output)\n\u001b[1;32m    597\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m status \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m400\u001b[39m:\n\u001b[0;32m--> 598\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcreateException(status, responseHeaders, data)\n\u001b[1;32m    599\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m responseHeaders, data\n",
+      "\u001b[0;31mBadCredentialsException\u001b[0m: 401 {\"message\": \"Bad credentials\", \"documentation_url\": \"https://docs.github.com/rest\"}"
+     ]
+    }
+   ],
    "source": [
     "from github import Github\n",
     "\n",
